--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="/images/Crossfit.jpg">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/club_enlistpage.css">
@@ -28,27 +30,34 @@
     <link rel="stylesheet" href="/styles/card_game.css">
     <link rel="stylesheet" href="/styles/about.css">
     <link rel="stylesheet" href="/styles/error.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="/css/merch.css">
     <title>Crossfit</title>
 </head>
+
 <body>
     <%- include('../partials/header') %>
-    <section class="main-content">
-        <%- body %>
-    </section>
-    <%- include('../partials/footer') %>
-    <script src="/script/club_dashboard.js"></script>
-    <script src="/script/viewer_dashboard.js"></script>
-    <script src="/script/header.js"></script>
-    <script src="/script/match_setup.js"></script>
-    <script src="/script/update_score.js"></script>
-    <script src="/script/live_score.js"></script>
-    <script src="/script/specific_scorecard.js"></script>
-    <script src="/script/leader_selection.js"></script>
-    <script src="/script/club_enlistpage.js"></script>
-    <script src="/script/cart.js"></script>
-    <script src="/script/merch-filters.js"></script>
-    <script src="/script/cart.js"></script>
-    <script src="/script/merch-filters.js"></script>
-    <script src="/script/card_game.js"></script>
+        <section class="main-content">
+            <%- body %>
+        </section>
+        <%- include('../partials/footer') %>
+            <script src="/script/club_dashboard.js"></script>
+            <script src="/script/viewer_dashboard.js"></script>
+            <script src="/script/header.js"></script>
+            <script src="/script/match_setup.js"></script>
+            <script src="/script/update_score.js"></script>
+            <script src="/script/live_score.js"></script>
+            <script src="/script/specific_scorecard.js"></script>
+            <script src="/script/leader_selection.js"></script>
+            <script src="/script/club_enlistpage.js"></script>
+            <script src="/script/cart.js"></script>
+            <script src="/script/merch-filters.js"></script>
+            <script src="/script/cart.js"></script>
+            <script src="/script/merch-filters.js"></script>
+            <script src="/script/card_game.js"></script>
+            <script src="/script/cart.js"></script>
+            <script src="/script/merch-filters.js"></script>
+
 </body>
+
 </html>
