--- a/views/merchandise.ejs
+++ b/views/merchandise.ejs
@@ -85,8 +85,8 @@
 </main>
  <% } else { %>
     <div class="live-score-page-no-login">
-        <h1>Please log in to view live scores</h1>
-        <p>You need to be logged in to access live match updates and scorecards.</p>
+        <h1>Please log in to view Merchandise</h1>
+        <p>You need to be logged in to access Merchandise.</p>
         <a href="/#home-roles" class="live-score-page-login-btn">Login</a>
     </div>
 <% } %>
