--- a/public/styles/viewers_dashboard.css
+++ b/public/styles/viewers_dashboard.css
@@ -460,6 +460,15 @@
   animation: formSlideDown 0.5s ease-out;
 }
 
+.viewers-dashboard-form-control {
+  margin-bottom: 15px;
+  height: 45px;
+  width: 100px;
+  position: relative;
+  border-radius: 15px;
+  background-color:azure;
+}
+
 @keyframes formSlideDown {
   0% { 
     opacity: 0; 
