--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -33,11 +33,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/css/merch.css">
     <title>Crossfit</title>
-    
-    <!-- Lottie Player for Animation -->
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    
-    <!-- Crossfit One-Time Loading Screen Styles -->
     <style>
         .crossfit-loader {
             position: fixed;
@@ -70,16 +65,11 @@
 <body class="crossfit-loading">
     <!-- Crossfit One-Time Loading Screen -->
     <div class="crossfit-loader">
-        <lottie-player 
-            src="/script/animation.json" 
-            background="transparent" 
-            speed="1" 
-            style="width: 100vw; height: 100vh;" 
-            loop 
-            autoplay>
+        <lottie-player src="/script/animation.json" background="transparent" speed="1"
+            style="width: 100vw; height: 100vh;" loop autoplay>
         </lottie-player>
     </div>
-    
+
     <%- include('../partials/header') %>
         <section class="main-content">
             <%- body %>
@@ -101,10 +91,9 @@
             <script src="/script/card_game.js"></script>
             <script src="/script/cart.js"></script>
             <script src="/script/merch-filters.js"></script>
-
-            <!-- Crossfit One-Time Loading Screen Script -->
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
             <script>
-                (function() {
+                (function () {
                     // Check if user has visited before in this session
                     const hasVisitedBefore = sessionStorage.getItem('crossfitVisited');
                     const loaderWrapper = document.querySelector('.crossfit-loader');
@@ -123,14 +112,14 @@
                     sessionStorage.setItem('crossfitVisited', 'true');
 
                     // Wait for all content to load, then show animation for 3 seconds
-                    window.addEventListener('load', function() {
-                        setTimeout(function() {
+                    window.addEventListener('load', function () {
+                        setTimeout(function () {
                             if (loaderWrapper) {
                                 // Add hidden class to trigger fade-out
                                 loaderWrapper.classList.add('hidden');
 
                                 // Listen for transition end to completely remove element
-                                loaderWrapper.addEventListener('transitionend', function() {
+                                loaderWrapper.addEventListener('transitionend', function () {
                                     loaderWrapper.remove();
                                     body.classList.remove('crossfit-loading');
                                 }, { once: true });
@@ -139,7 +128,7 @@
                     });
 
                     // Fallback: Remove loader after maximum 10 seconds
-                    setTimeout(function() {
+                    setTimeout(function () {
                         if (loaderWrapper && loaderWrapper.parentNode) {
                             loaderWrapper.remove();
                             body.classList.remove('crossfit-loading');
