--- a/views/card-game.ejs
+++ b/views/card-game.ejs
@@ -25,7 +25,7 @@
                 <% } %>
             <% } %>
           </div>
-          <h3 class="player-name">Player 1</h3>
+          <h3 class="player-name"><%= user.name %></h3>
           <div class="card-count"><span id="p1count">10</span> cards</div>
         </div>
       </div>
