Contact Us page

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="/styles/error.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/css/merch.css">
+    <link rel="stylesheet" href="/css/contact-uscss">
     <title>Crossfit</title>
     <style>
         .crossfit-loader {
@@ -92,6 +93,7 @@
             <script src="/script/cart.js"></script>
             <script src="/script/merch-filters.js"></script>
             <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+            <script src="/script/contact-us.js"></script>
             <script>
                 (function () {
                     // Check if user has visited before in this session
