--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,7 +9,7 @@
     <div class="footer-center">
       <div class="footer-links">
         <a href="/about">About Us</a>
-        <a href="#">Contact Us</a>
+        <a href="/contact-us">Contact Us</a>
         <a href="#">FAQ</a>
         <a href="#">Terms of Service</a>
         <a href="#">Cookie Policy</a>
